--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   --font-primary-bold: 700;
   
   /* font size */
-  --font-header: max(2.4rem, min(4.3vw,6rem));
+  --font-header: max(2.2rem, min(4.3vw,3.5rem));
   --font-sub-header:  max(2rem, min(2.5vw,3rem));
   --font-subtext: max(1.8rem, min(1.8vw,2.5rem));
   --font-ptext: max(1.05rem, min(1.4vw,2rem));
@@ -596,14 +596,13 @@ outline: none;
   }
   .content-image-mobile {
     display: block;
-    max-width: 110vw;
-    width: 110vw;
-    margin: 0 calc(-60vw + 55%);
+    max-width: 100%;
+    width: 100%;
+    margin: 0 calc(-50vw + 50%);
   }
 
   .content-image-mobile--2 {
     display: block;
-    max-width: 100%;
     width: 100%;
     margin: 0 calc(-50vw + 50%);
   }
